2008-11-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/cfg_parser.y (mu_cfg_format_error): Raise
	mu_cfg_error_count only if level is less or equal to error.
	(_scan_tree_helper): "unknown section" is a warning.

	* configure.ac, NEWS: Version 1.9.93.
	* include/mailutils/libargp.h (mu_app_cfg_verifier): New extern.
	* libargp/muinit.c (mu_app_cfg_verifier): New variable.
	(mu_app_init): Call mu_app_cfg_verifier if in lint mode.
	* mailbox/cfg_driver.c (mu_cfg_tree_reduce): Return 0 if no
	configuration is supplied.
	
2008-11-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libargp/muinit.c (mu_app_init): Do not parse configs if
	--config-help was given.

2008-11-09  Wojciech Polak  <polak@gnu.org>

	Fix typos.
	
	* doc/texinfo/mailcap.texi, doc/texinfo/mailutils.texi
	doc/texinfo/mom.texi, doc/texinfo/mu-mh.texi,
	doc/texinfo/mu_message.texi, doc/texinfo/programs.texi,
	doc/texinfo/sieve.texi: Fix typos.

2008-11-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	Rewrite default mailbox format support to make sure it does not
	break format autodetection. Improve the docs.
	
	* configure.ac (MU_DEFAULT_SCHEME): New configuration variable.
	* mailbox/version.c (mu_conf_opt): Include default scheme.
	
	* examples/mimetest.c, examples/mta.c, libmu_scm/mu_scm.c: Remove
	mu_path_record. Use mu_registrar_set_default_record.

	* libproto/mbox/folder.c (_path_is_scheme): Rename to
	_mbox_is_scheme. Minor changes as well.
	(_path_record, mu_path_record): Removed.
	(_mbox_record): Use _mbox_is_scheme.

	* libsieve/actions.c: Remove unused variable.
	
	* include/mailutils/Makefile.am (types.h rule): Replace
	_MU_DEFAULT_RECORD_. Change MU_OFF_TYPE replacement pattern to
	_MU_OFF_TYPE_.
	
	* include/mailutils/mailbox.h (mu_mailbox_set_default_proto)
	(mu_mailbox_get_default_proto): Remove. See below.
	* include/mailutils/registrar.h (mu_registrar_set_default_scheme)
	(mu_registrar_get_default_scheme)
	(mu_registrar_get_default_record)
	(mu_registrar_set_default_record)