@@ -581,6 +581,16 @@ mu_cfg_tree_reduce (mu_cfg_tree_t *parse_tree, const char *progname,
 {
   int rc = 0;
   
+  if (flags & MU_PARSE_CONFIG_DUMP)
+    {
+      mu_stream_t stream;
+      mu_stdio_stream_create (&stream, stderr,
+ 			      MU_STREAM_NO_CHECK|MU_STREAM_NO_CLOSE);
+      mu_stream_open (stream);
+      mu_cfg_format_parse_tree (stream, parse_tree);
+      mu_stream_destroy (&stream, NULL);
+    }
+
   if (root_container)
     {
       struct include_data idata;
@@ -596,16 +606,6 @@ mu_cfg_tree_reduce (mu_cfg_tree_t *parse_tree, const char *progname,
       rc = mu_cfg_scan_tree (parse_tree, &cont->v.section, target_ptr,
 			     (void*) progname);
       mu_config_destroy_container (&cont);
-    }
-
-  if (flags & MU_PARSE_CONFIG_DUMP)
-    {
-      mu_stream_t stream;
-      mu_stdio_stream_create (&stream, stderr,
- 			      MU_STREAM_NO_CHECK|MU_STREAM_NO_CLOSE);
-      mu_stream_open (stream);
-      mu_cfg_format_parse_tree (stream, parse_tree);
-      mu_stream_destroy (&stream, NULL);
     }
 
   return rc;
